--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD:wght@100..400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/img/IMG_4228-modified.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/IMG_4228-modified.png" type="image/x-icon">
 
 
 </head>
@@ -50,7 +50,7 @@ Change Mode
     </article>
 
 <article class="right-section">
-<img  class="my-img" width="200px" height="170px"  src="/img/IMG_4229.JPG" alt="My image">
+<img  class="my-img" width="200px" height="170px"  src="img/IMG_4229.JPG" alt="My image">
 <h5><i>Mohammad Shami</i></h5>
 </article>
 </section>
@@ -70,3 +70,4 @@ Change Mode
 
 </body>
 </html>
+
